--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Iparbio</title>
     <link rel="stylesheet" href="./src/index.css">
     
+     <link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/@balkangraph/orgchart.js/dist/css/orgchart.css"
+  />
   </head>
   <body>
     <div id="root"></div>
